--- a/public/index.html
+++ b/public/index.html
@@ -98,8 +98,8 @@
 		<div class="row" id="alerts">
 			<div class="col-xs-2" id="s1">Studio 1</div>
 			<div class="col-xs-2" id="s2">Studio 2</div>
-			<div class="col-xs-2" id="ob1">OB 1</div>
-			<div class="col-xs-2" id="ob2">OB 2</div>
+			<div class="col-xs-2" id="obs1">OB 1</div>
+			<div class="col-xs-2" id="obs2">OB 2</div>
 			<div class="col-xs-2" id="obit">OBIT</div>
 			<div class="col-xs-2" id="dead">DEAD AIR</div>
 		</div>
