Changes how the whole app is compiled
- Renames source folder from /public/ to /src/
- Adds Grunt tasks for building for development and for production
- Adds Grunt tasks for running `npm install` and `bower install`
- Moves config.json into root of project and Grunt copies it into /bin/
- Removes apache config example

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- bower:css -->
-	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
 	<!-- endbower -->
 
 	<link href='//fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
@@ -108,15 +107,10 @@
 </footer>
 
 <!-- bower:js -->
-<script src="bower_components/jquery/dist/jquery.js"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-<script src="bower_components/moment/moment.js"></script>
-<script src="bower_components/jquery-ui/jquery-ui.js"></script>
 <!-- endbower -->
 
-<!--<script src="scripts/myury.core.js"></script>-->
 <script src="scripts/timelord.min.js"></script>
-<script src="scripts/main.js"></script>
+<script src="scripts/main.min.js"></script>
 
 </body>
 </html>
