Adds currently playing song

--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,15 @@
 
 		<div id="hide-when-breaking-news">
 
+
+			<div class="row" id="current-song">
+				<div class="col-xs-12">
+					<span class="content">
+						!!SONG!!
+					</span>
+				</div>
+			</div>
+
 			<div class="row" id="current-show-title">
 				<div class="col-xs-12">
 				<span class="content">
