added countdown and up for 101
this is only temporary and should be reverted after 101

--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,15 @@
 
 			</div>
 
+			<div class="row">
+				<div class="col-xs-6">
+					<span id="countUP101" class="counter">!!101 COUNTUP!!</span>
+				</div>
+				<div class="col-xs-6">
+					<span id="countdown101" class="counter">!!101 COUNTDOWN!!</span>
+				</div>
+			</div>
+
 		</div>
 
 	</div>
