Checks to see if Timelord is still available on server and refreshes every 5 hours.

--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
 </div>
 
 <footer class="sticky">
-
+	<div id="availability-error">Waiting for Timelord HTTP access...</div>
 	<div class="container-fluid">
 		<div class="row" id="alerts">
 			<div class="col-xs-2" id="s1">Studio 1</div>
