Update index.html to reflect previous js commit

--- a/src/index.html
+++ b/src/index.html
@@ -115,8 +115,8 @@
 		<div class="row" id="alerts">
 			<div class="col-xs-2" id="s1">Studio 1</div>
 			<div class="col-xs-2" id="s2">Studio 2</div>
-			<div class="col-xs-2" id="obs1">OB 1</div>
-			<div class="col-xs-2" id="obs2">OB 2</div>
+			<div class="col-xs-2" id="s4">OB 1</div>
+			<div class="col-xs-2" id="s5">OB 2</div>
 			<div class="col-xs-2" id="obit">OBIT</div>
 			<div class="col-xs-2" id="dead">DEAD AIR</div>
 		</div>
