Update Song to Track

--- a/src/index.html
+++ b/src/index.html
@@ -56,10 +56,10 @@
 		<div id="hide-when-breaking-news">
 
 
-			<div class="row" id="current-song">
+			<div class="row" id="current-track">
 				<div class="col-xs-12">
 					<span class="content">
-						!!SONG!!
+						!!TRACK!!
 					</span>
 				</div>
 			</div>
