Change status bar studio names to match new signs.

--- a/src/index.html
+++ b/src/index.html
@@ -111,8 +111,8 @@
 
 	<div class="container-fluid">
 		<div class="row" id="alerts">
-			<div class="col-xs-2" id="s1">Studio 1</div>
-			<div class="col-xs-2" id="s2">Studio 2</div>
+			<div class="col-xs-2" id="s1">Studio Red</div>
+			<div class="col-xs-2" id="s2">Studio Blue</div>
 			<div class="col-xs-2" id="s3">Jukebox</div>
 			<div class="col-xs-2" id="s4">OB</div>
 			<div class="col-xs-2" id="obit">OBIT</div>
