Change main section styling to use css grid
Reason: neater HTML, easier to adjust down the line and add new features

--- a/src/index.html
+++ b/src/index.html
@@ -15,58 +15,31 @@
 </head>
 <body>
 
-<div class="container text-center">
-		<div class="row">
-			<div class="col-xs-12">
-				<span id="studio">
-					!!STUDIO!!
-				</span>
-			</div>
+<div class="container text-center" style="display:flex;justify-content:center;align-items:center;">
+	<div class="main">
+		<span id="studio">
+			!!STUDIO!!
+		</span>
+		<div id="date">
+			!!DATE!!
 		</div>
-
-		<div class="row">
-			<div class="col-xs-12">
-				<div id="date">
-					!!DATE!!
-				</div>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-xs-12">
-				<span id="time">
-					!!TIME!!
-				</span>
-			</div>
-		</div>
-
-		<div class="row" id="current-show-title">
-			<div class="col-xs-12">
+		<span id="time">
+			!!TIME!!
+		</span>
+		<div id="current-show-title">
 			<span class="content">
 				!!URY!!
 			</span>
-			</div>
 		</div>
-
-		<div id="next-shows">
-
-			<div class="row">
-				<div class="col-xs-12">
-			<span id="next0" class="up-next">
-				UP NEXT: <span class="name">!!UP NEXT!!</span> @ <span class="time">!!TIME!!</span>
-			</span>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-xs-12">
-			<span id="next1" class="up-next">
-				<span class="name">!!UP NEXT!!</span> @ <span class="time">!!TIME!!</span>
-			</span>
-				</div>
-			</div>
-
-		</div>
+		<span id="next0" class="up-next">
+			<strong>Coming up: </strong> <br>
+			<span class="name">!!UP NEXT!!</span> @ <span class="time">!!TIME!!</span>
+		</span>
+		<span id="next1" class="up-next">
+			<strong>Then: </strong> <br>
+			<span class="name">!!UP NEXT!!</span> @ <span class="time">!!TIME!!</span>
+		</span>
+	</div>
 </div>
 
 <footer class="sticky">
