tweak scaling and sizing

--- a/src/index.html
+++ b/src/index.html
@@ -32,36 +32,39 @@
 			</span>
 		</div>
 		<span id="next0" class="up-next">
-			<strong>Coming up: </strong> <br>
+			<strong>Coming up: </strong>
 			<span class="name">!!UP NEXT!!</span> @ <span class="time">!!TIME!!</span>
 		</span>
 		<span id="next1" class="up-next">
-			<strong>Then: </strong> <br>
+			<strong>Then: </strong>
 			<span class="name">!!UP NEXT!!</span> @ <span class="time">!!TIME!!</span>
 		</span>
+		<div id="current-track" class="hide-when-breaking-news">
+			<span class="heading"></span>
+			<span class="content">!! TRACK !!</span>
+		</div>
+		<div id="breaking-news" class="hidden">
+			<div class="content">!! BREAKING NEWS !!</div>
+		</div>
+		<footer class="footer">
+			<div class="container-fluid">
+				<div class="row" id="status">
+					
+					
+				</div>
+				<div class="row" id="alerts">
+					<div class="col-xs-2" id="s1">Studio Red</div>
+					<div class="col-xs-2" id="s2">Studio Blue</div>
+					<div class="col-xs-2" id="s3">Jukebox</div>
+					<div class="col-xs-2" id="s4">OB</div>
+					<div class="col-xs-2" id="obit">OBIT</div>
+					<div class="col-xs-2" id="dead">DEAD AIR</div>
+				</div>
+			</div>
+		</footer>
 	</div>
 
-	<footer class="sticky">
-		<div class="container-fluid">
-			<div class="row" id="status">
-				<div id="current-track" class="hide-when-breaking-news">
-					<div class="pull-left heading"></div>
-					<div class="content">!! TRACK !!</div>
-				</div>
-				<div id="breaking-news" class="hidden">
-					<div class="content">!! BREAKING NEWS !!</div>
-				</div>
-			</div>
-			<div class="row" id="alerts">
-				<div class="col-xs-2" id="s1">Studio Red</div>
-				<div class="col-xs-2" id="s2">Studio Blue</div>
-				<div class="col-xs-2" id="s3">Jukebox</div>
-				<div class="col-xs-2" id="s4">OB</div>
-				<div class="col-xs-2" id="obit">OBIT</div>
-				<div class="col-xs-2" id="dead">DEAD AIR</div>
-			</div>
-		</div>
-	</footer>
+
 
 	<script src="npm_components/scripts/jquery.min.js"></script>
 	<script src="npm_components/scripts/bootstrap.min.js"></script>
