--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,7 @@
 					<div class="col-xs-2" id="s2">Studio Blue</div>
 					<div class="col-xs-2" id="s3">Jukebox</div>
 					<div class="col-xs-2" id="s4">OB</div>
+					<div class="col-xs-2" id="s5">WebStudio</div>
 					<div class="col-xs-2" id="obit">OBIT</div>
 					<div class="col-xs-2" id="dead">DEAD AIR</div>
 				</div>
