Make Stuff Bigger

--- a/src/index.html
+++ b/src/index.html
@@ -46,11 +46,17 @@
 		<div id="breaking-news" class="hidden">
 			<div class="content">!! BREAKING NEWS !!</div>
 		</div>
+		<div id="news-counts" class="hidden">
+			<div class="content">
+				<div class="content-sm">!! COUNTDOWNS !!</div>
+				<div class="content-lg"> ## </div>
+			</div>
+		</div>
 		<footer class="footer">
 			<div class="container-fluid">
 				<div class="row" id="status">
-					
-					
+
+
 				</div>
 				<div class="row" id="alerts">
 					<div class="col-xs-2" id="s1">Studio Red</div>
@@ -74,4 +80,5 @@
 	<script src="scripts/main.min.js"></script>
 
 </body>
+
 </html>
