--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
 		<span id="studio">
 			!!STUDIO!!
 		</span>
+		<span id="fm-info">
+			!!FM INFO!!
+		</span>
 		<div id="date">
 			!!DATE!!
 		</div>
